--- a/styles.css
+++ b/styles.css
@@ -183,7 +183,7 @@
     .item{
       width: 100px;
       height: 200px;
-      top: 70%;
+      top: 60%;
       overflow: hidden;
       
       &:nth-child(3) { left: 20%;}
@@ -191,6 +191,22 @@
       &:nth-child(5) {left: calc(20% + 240px);}
       &:nth-child(6) { left: calc(20% + 280px); opacity: 0;}
     }
+       .nav{
+    position: absolute;
+    bottom: 3rem;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 5;
+    user-select: none;
+  
+    & .btn{
+      background-color: rgba(255,255,255,0.5);
+      color: #000;
+      border: 2px solid rgba(0,0,0,0.6);
+      margin: 0 0.25rem;
+      padding:  0.75rem;
+      border-radius: 50%;
+      cursor: pointer;
   }
   
   /* thanks for Watching */
